# cli-rpg

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/engine/: game.cpp  game.hpp  game_draw.cpp  input.cpp  input.hpp  renderer.cpp  renderer.hpp
src/world/: gen.cpp  gen.hpp  map.cpp  map.hpp
